# DZ

API_CLI/: data_client.py  main.py
Exam/: task1.py  task2.py  task3.py  task4.py  task5.py
Parser/: README.md  data_db.py  main.py  pyproject.toml  sv_parse.py  ui.py
Parser/SQLScripts/: create_scripts.txt  delete_all_series.txt  get_player_link.txt  get_series_images.txt  get_series_info.txt  get_series_link.txt  get_series_list.txt  insert_series1.txt  insert_series2.txt  update_series.txt
Parser/UI/: UI.pyproject  form.ui  form1.ui
SQL/: create_tables.sql  fill_tables.sql
SQL2/: ERD-air.pgerd  KGB.sql
SQL3/: DB_DZ.db  DZ.py
less19/: task1.py  task2.py  task3.py  task4.py  task5.py
less20/: Alphabet.py
